# operate_system_practice

./: .gitignore  CMakeLists.txt  a.txt  bochs.out  bochsrc.txt  load.sh  loader.S  mbr_page110.S  readme.txt  write_bin.sh  xxd.sh  纠错表.md
boot/: CMakeLists.txt  loader.S  mbr.S
boot/include/: boot.inc
include/: boot.inc
kernel/: CMakeLists.txt  CMakeLists_bk.txt  asm_print.h  debug.c  debug.h  global.h  init.c  interrupt.c  interrupt.h  io.c  io.h  kernel.S  list.c  list.h  main.c  print.c  print.h  switch.S  syscall_write.S  thread.c  thread.h  vector.S
lib/: CMakeLists.txt  stdint.h
lib/dervice/: CMakeLists.txt  timer.c
lib/device/: CMakeLists.txt  timer.c  timer.h
lib/io/: CMakeLists.txt  print.S
lib/kernel/: io.h  print.S  print.h
